--- a/CNode/src/main/res/layout/reply_item.xml
+++ b/CNode/src/main/res/layout/reply_item.xml
@@ -27,7 +27,7 @@
         android:text="用户名"
         android:textColor="@color/abc_primary_text_material_light" />
 
-    <TextView
+    <WebView
         android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -37,7 +37,6 @@
         android:layout_marginBottom="32dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginTop="8dp"
-        android:text="内容" />
+        android:layout_marginTop="8dp" />
 
 </RelativeLayout>
