--- a/CNode/src/main/res/layout/topic_header.xml
+++ b/CNode/src/main/res/layout/topic_header.xml
@@ -32,7 +32,7 @@
         android:text="用户名"
         android:textColor="@color/abc_secondary_text_material_light" />
 
-    <TextView
+    <WebView
         android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -41,9 +41,7 @@
         android:layout_below="@+id/user"
         android:layout_marginBottom="32dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:text="内容"
-        android:textSize="@dimen/abc_text_size_body_1_material" />
+        android:layout_marginRight="16dp" />
 
     <View
         android:layout_width="match_parent"
